# black-box-game

./: .gitignore  CMakeLists.txt  README.md  blackbox.pro  main.cpp
abgabe/: SoSe19_Padi02
logic/: BlackBoxModel.cpp  BlackBoxModel.h  Board.h  Cell.h  Rules.cpp
old/: blackbox.pro  main.cpp
old/logic/: BlackBoxModel.cpp  BlackBoxModel.h  Board.cpp  Cell.cpp  Rules.h
old/view/: game.qml  main.qml  main2.qml
qml/: main.qml
resources/other/: BlackBox.xls
resources/qml/: game.qml  main.qml  qml.qrc
src/: BlackBoxBackend.cpp  BlackBoxBackend.h  BlackBoxModel.cpp  BlackBoxModel.h  Cell.cpp  Cell.h  Ray.cpp  Ray.h  main.cpp
view/: main.qml
